[Refactor} : RacingCar 클래스 리팩토링 1. 부모 클래스 제거 2. RacingCar 객체를 여러 생성하도록 변경 3. CompareRace, CompareRaceTest 클래스 로직 변경